# crm

./: Cargo.toml  README.md  _typos.toml  cliff.toml  deny.toml
crm/: Cargo.toml  build.rs  crm.yml
crm-metadata/: Cargo.toml  build.rs
crm-metadata/src/: lib.rs  main.rs
crm-metadata/src/abi/: mod.rs
crm-metadata/src/pb/: metadata.rs
crm-metadata/tests/: service.rs
crm-send/: Cargo.toml  build.rs
crm-send/src/: lib.rs  main.rs
crm-send/src/abi/: email.rs  in_app.rs  mod.rs  sms.rs
crm-send/src/pb/: mod.rs  notification.rs
crm-send/tests/: service.rs
crm/src/: client.rs  crm.yml  lib.rs  server.rs
crm/src/abi/: auth.rs  crm.rs  mod.rs
crm/src/pb/: crm.rs  mod.rs
protos/crm/: crm.proto  messages.proto  rpc.proto
protos/metadata/: messages.proto
protos/user-stats/: messages.proto  rpc.proto
user-stat/: .env  Cargo.toml  build.rs  user_stat.yml
user-stat/examples/: fake.rs  gen.rs
user-stat/fixtures/: data.sql
user-stat/migrations/: 20240727102709_index.sql
user-stat/src/: config.rs  lib.rs  main.rs
user-stat/src/abi/: mod.rs
user-stat/src/pb/: mod.rs  user_stats.rs
