[workspace]
members = ["crm", "user-stat"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
prost = "0.13.1"
prost-build = "0.13.1"
prost-types = "0.13.1"
tokio = { version = "1.39.1", features = ["full"] }
tonic = { version = "0.12.1", features = ["zstd", "tls"] }
tonic-build = "0.12.1"
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.8.0", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
