[workspace]
members = ["crm", "crm-metadata", "crm-send", "user-stat"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
derive_builder = "0.20.1"
futures = "0.3.30"
itertools = "0.13.0"
prost = "0.13.2"
prost-build = "0.13.2"
prost-types = "0.13.2"
rand = "0.8.5"
serde = { version = "1.0.209", features = ["derive"] }
serde_yaml = "0.9.33"
sqlx = { version = "0.7.4", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }

tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.15"
tonic = { version = "0.12.1", features = ["zstd", "tls"] }
tonic-build = "0.11.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
user-stat = { path = "./user-stat" }
crm-send = {path = "./crm-send"}
crm-metadata = {path = "./crm-metadata"}
